akka-javasdk-annotation-processor-tests/component-validation-descriptors/src/test/resources/test-sources/valid/MyKeyValueEntity.java
package com.example;

import akka.javasdk.keyvalueentity.KeyValueEntity;

public class MyKeyValueEntity extends KeyValueEntity<String> {}
